# Master-study

./: README.md
INTRODUCTION TO ROBOTICS/: or_lab2.py  or_lab3.py  or_lab_1.py  plot_trajectories.py  utils.py
ML/: SU1-2023-LAB1.ipynb  SU1-2023-LAB2 (1).ipynb  SU1-2023-LAB3.ipynb  lab4.ipynb
PROGRAMMING_AND_SIMULATING_ROBOTS/lab4/: CMakeLists.txt
PROGRAMMING_AND_SIMULATING_ROBOTS/lab4/first_task/: luka_vukelic.cpp
PROGRAMMING_AND_SIMULATING_ROBOTS/lab4/second_task/: CMakeLists.txt
PROGRAMMING_AND_SIMULATING_ROBOTS/lab5/Game/: turtle_game.cpp
PROGRAMMING_AND_SIMULATING_ROBOTS/lab5/Lawnmower/: CMakeLists.txt  luka_vukelic.launch  turtle_lawnmower_node.cpp
PROGRAMMING_AND_SIMULATING_ROBOTS/lab6/: luka_vukelic.launch
PROGRAMMING_AND_SIMULATING_ROBOTS/lab6/simple_rps_world/: luka_vukelic.launch  simple_rps.cfg  simple_rps.world
PROGRAMMING_AND_SIMULATING_ROBOTS/lab6/simple_rps_world/bitmaps/: simple_rooms.yaml
PROGRAMMING_AND_SIMULATING_ROBOTS/lab6/task2/: costmap_common_params.yaml
